Backend/error_cmd.txt
file:///C:/Users/ADMIN/Desktop/PERPLEXITY/Backend/src/services/taskScheduler.service.js:4
import { chatModel } from '../models/chat.model.js';
         ^^^^^^^^^
SyntaxError: The requested module '../models/chat.model.js' does not provide an export named 'chatModel'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.12.0
